maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:10: error: not found: value keepHandOnRightWall
    	keepHandOnRightWall();
        ^