maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
    def keepHandOnLeftWall() = {
    	if (!(estFaceMur)) {
		gauche();
		if (estFaceMur) {droite();avance()} else {avance()}
    	} else {droite()}
    }
    while (!(estSurBiscuit)) {
    	keepHandOnRightWall();
    	if (!estFaceMur) {avance()};
    }
    prendBiscuit();
}
